--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -8,7 +8,7 @@ WORKDIR $APPLICATION_ROOT
 
 RUN pip3 install pipenv
 
-COPY Pipfile* $APPLICATION_ROOT/
-RUN pipenv install --dev
+COPY . $APPLICATION_ROOT/
+RUN pipenv install --dev --ignore-pipfile
 
 EXPOSE 8000
