--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
     docker:
       - image: circleci/python:3.6
     steps:
-      - attach_workspaces:
+      - attach_workspace:
           at: .
       - run:
           name: Run Static Analysis
@@ -40,7 +40,7 @@ jobs:
     docker:
       - image: circleci/python:3.6
     steps:
-      - attach_workspaces:
+      - attach_workspace:
           at: .
       - run:
           name: Run Unit Tests
