--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,6 +73,7 @@ jobs:
             ssh-keyscan -H 35.247.154.179  >> ~/.ssh/known_hosts
             pipenv install 
             pipenv run ansible-playbook -i server_hosts playbooks/dev.yml --extra-vars "project_root=~/simplezat"
+
   acceptance_tests:
     working_directory: ~/simplezat
     docker:
@@ -81,11 +82,11 @@ jobs:
       - attach_workspace:
           at: .
       - run:
-          - name: Run Acceptance Tests
-          - command: |
-              cd tests
-              npm install cypress
-              CYPRESS_baseUrl=http:// ./node_modules/.bin/cypress run --spec 'cypress/integration/simplezat/*'
+          name: Run Acceptance Tests
+          command: |
+            cd tests
+            npm install cypress
+            CYPRESS_baseUrl=http:// ./node_modules/.bin/cypress run --spec 'cypress/integration/simplezat/*'
 
   deploy_production:
     working_directory: ~/simplezat
