--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
           command: |
             pipenv install --dev
             cd simplezat
-            pipenv run pytest
+            pipenv pytest
 
   deploy_dev:
     working_directory: ~/simplezat
