--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx:1.15.7-alpine
 
-COPY simplezat.conf /etc/nginx/conf/default.conf
+COPY simplezat.conf /etc/nginx/conf.d/default.conf
 
 CMD /usr/sbin/nginx -g "daemon off;"
